--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,9 +15,14 @@
 		 	<button ion-button icon-only (click)='abrePorta();'>
   		    <ion-icon name="lock"></ion-icon>
 			 </button>
-		 	<button ion-button icon-only [navPush]="imeiPage">
-				<ion-icon name="cog"></ion-icon>
-		 </button>		 
 		</div>
 	</div>
 </ion-content>
+
+<ion-footer>
+	<div text-right>
+		<button ion-button icon-only [navPush]="imeiPage">
+				<ion-icon name="cog"></ion-icon>
+		 </button>
+	</div>	 		 
+	</ion-footer>
