--- a/src/pages/imei/imei.html
+++ b/src/pages/imei/imei.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the ImeiPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
+      <ion-title>Configurações</ion-title>      
     <button ion-button icon-only menuToggle>
         <ion-icon name="arrow-dropleft"></ion-icon>
     </button>  
