--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,9 +12,11 @@
 	<p>Clique no cadeado para desbloquear a porta</p>
 
     <div padding-vertical>
-		 	<button ion-button icon-only (click)='abrePorta();'>
-  		    <ion-icon name="lock"></ion-icon>
-			 </button>
+			<a href="http://192.168.6.134:1234">
+		 		<button ion-button icon-only (click)='abrePorta();'>
+  		    	<ion-icon name="lock"></ion-icon>
+			 	</button>
+			</a>
 		</div>
 	</div>
 </ion-content>
